[tool.poetry]
name = "px-py"
version = "1.0.0"
description = "Python lirary for working with .px files"
authors = ["Jani Šumak <jani.sumak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
