[tool.poetry]
name = "px-py"
version = "1.0.0"
description = "Python lirary for working with .px files"
authors = ["Jani Šumak <jani.sumak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pcaxis = {git = "https://github.com/zejn/pcaxis"}
pandas = {version = "^1.1.4", optional = true}
openpyexcel = {version = "^2.5.14", optional = true}

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.1.2"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
