[tool.poetry]
name = "px-py"
version = "1.0.0"
description = "Python lirary for working with .px files"
authors = ["Jani Šumak <jani.sumak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = {version = "^1.1.4", optional = true}
openpyexcel = {version = "^2.5.14", optional = true}
pyparsing = "^2.4.7"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.1.2"
mypy = "^0.790"
pylint = "^2.6.0"
pre-commit = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
  )/
)
'''
